--- a/index.html
+++ b/index.html
@@ -43,7 +43,13 @@
 </div>
 
 <!-- ----------------------------------------------Nav Style----------------------------------------------  -->
-
+<script>
+    $(document).ready(function(){
+        $(".click").click(function(){
+            $("header").toggle();
+        })
+    })
+</script>
 
 
 <div class="body">
