--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <a href="Saju_SV.pdf" target="_blank" class="p-3 text-decoration-none text-white cvbutton"> &nbsp; Download CV &nbsp; </a>
                  </div>
                  <div class="animation col-lg-6 col-md-6 col-12 d-flex justify-content-center pt-lg-0 pt-md-5 pt-5">
-                    <img src="myphoto.png" alt="" width="80%" class="pt-md-5 pt-lg-0">
+                    <img src="myphoto.png" alt=""  class="pt-md-5 pt-lg-0">
                  </div>
             </div>
         </div>
